@@ -1,4 +1,8 @@
 Changes for APR 1.3.0
+
+  *) Fix apr_socket_recvfrom() to ensure the peer's address is returned
+     through the "from" parameter.  [Joe Orton]
+
   *) Fix error checking in kqueue, epoll and event port versions of
      apr_pollset_create.  PR 40660, 40661, 40662
      [Larry Cipriani <lvc lucent.com>]
